[package]
name = "jk"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
gumdrop = "0.8.1"
itertools = "0.13.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
torrent-common = { version = "0.1.2", features = ["require-parse-names"] }
ureq = { version = "2.9.7", features = ["json", "cookies"] }
